@@ -1,9 +1,7 @@
 package com.E_Commerce.Product_services.services;
 
 import com.E_Commerce.Product_services.exception.ResourceNotFoundExceptions;
-import com.E_Commerce.Product_services.model.dto.CategoryRequest;
-import com.E_Commerce.Product_services.model.dto.CategoryResponse;
-import com.E_Commerce.Product_services.model.dto.ProductResponse;
+import com.E_Commerce.Product_services.model.dto.*;
 import com.E_Commerce.Product_services.model.entity.Category;
 import com.E_Commerce.Product_services.model.entity.Product;
 import com.E_Commerce.Product_services.repository.CategoryRepository;
@@ -11,7 +9,11 @@ import com.E_Commerce.Product_services.repository.ProductRepository;
 import com.E_Commerce.Product_services.util.ProductUtil;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.ResourceAccessException;
 
 import java.util.List;
 import java.util.Optional;
@@ -33,37 +35,54 @@ public class CategoryServices {
     public List<CategoryResponse> getAllCategory() throws ResourceNotFoundExceptions{
         List<Category> categories = categoryRepository.findAll();
 
-        if (categories == null) throw new ResourceNotFoundExceptions("Categorias no encontradas");
+        if (categories.isEmpty()) throw new ResourceNotFoundExceptions("Categorias no encontradas");
 
         return categories.stream().map(
                 category -> new CategoryResponse(
                         category.getCode(),
-                        category.getNameCategory(),
-                        category.getProducts()
+                        category.getNameCategory()
                 )
         ).collect(Collectors.toList());
     }
 
     //getByCategoryProduct, Obtener productos por categoria
-    @Cacheable(value = "productsByCategory", key = "#id_category")
-    public List<ProductResponse> getByCategoryProduct(Long id_category) throws ResourceNotFoundExceptions {
-        List<Product> products = productRepository.findByCategoryId(id_category);
+    @Cacheable(value = "productsByCategory", key = "'cat=' + #id_category + ',page=' + #page + ',size=' + #size")
+    public CategoryProductsPageResponse getCategoryWithProductsPaged(Long id_category , int page, int size) throws ResourceNotFoundExceptions {
 
-        if (!categoryRepository.existsById(id_category)){
-            throw new ResourceNotFoundExceptions("La categoria no existe");
-        }
-        return products.stream()
+        Category category = categoryRepository.findById(id_category).orElseThrow(
+                () -> new ResourceNotFoundExceptions("La categoria no existe")
+        );
+        Pageable pageable = PageRequest.of(page, size);
+
+        Page<Product> productPage = productRepository.findByCategoryId(id_category, pageable);
+
+        List<ProductResponse> products = productPage.getContent().stream()
                 .map(product -> new ProductResponse(
                         product.getCode(),
                         product.getName(),
                         product.getPrice(),
                         product.getDescription(),
                         product.getStock()
-                )).collect(Collectors.toList());
+                ))
+                .toList();
+
+        PageResponse<ProductResponse> pageResponse = new PageResponse<>(
+                products,
+                productPage.getNumber(),
+                productPage.getSize(),
+                productPage.getTotalElements(),
+                productPage.getTotalPages()
+        );
+
+        return new CategoryProductsPageResponse(
+                category.getCode(),
+                category.getNameCategory(),
+                pageResponse
+        );
     }
 
     //createNewCategory, Crear nueva categoria
-    @CacheEvict(value = "categoryAll", allEntries = true)
+    @CacheEvict(value = {"categoryAll", "productsByCategory"}, allEntries = true)
     public void createNewCategory(CategoryRequest request){
         Optional<Category> opCategory = categoryRepository.findByNameCategory(request.getNameCategory());
 
@@ -78,4 +97,6 @@ public class CategoryServices {
 
         categoryRepository.save(category);
     }
+
+
 }
