@@ -1,20 +1,23 @@
 package com.E_Commerce.Product_services.services;
 
 import com.E_Commerce.Product_services.exception.ResourceNotFoundExceptions;
-import com.E_Commerce.Product_services.model.dto.ProductResponse;
+import com.E_Commerce.Product_services.model.dto.PageResponse;
 import com.E_Commerce.Product_services.model.dto.ProductRequest;
+import com.E_Commerce.Product_services.model.dto.ProductResponse;
 import com.E_Commerce.Product_services.model.entity.Category;
 import com.E_Commerce.Product_services.model.entity.Product;
 import com.E_Commerce.Product_services.repository.CategoryRepository;
 import com.E_Commerce.Product_services.repository.ProductRepository;
 import com.E_Commerce.Product_services.util.ProductUtil;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.stereotype.Service;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.CachePut;
-import org.springframework.cache.annotation.Cacheable;
-import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductServices {
@@ -27,19 +30,58 @@ public class ProductServices {
         this.categoryRepository = categoryRepository;
     }
 
-    //getAllProduct, Obtener los productos
-    @Cacheable(value = "productsAll")
-    public List<ProductResponse> getAllProduct(){
-        List<Product> products = productRepository.findAll();
+    //@Cacheable(value = "product", key = "'search=' + #search + ',categoryName=' + #categoryName + ',minPrice=' + #minPrice + ',maxPrice=' + #maxPrice + ',page=' + #page + ',size=' + #size")
+    public PageResponse<ProductResponse> searchProductFilter(
+            String search, String categoryName, Double minPrice, Double maxPrice, int page, int size){
 
-        return products.stream()
-                .map(product -> new ProductResponse(
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Product> productPage = productRepository.filterProduct(search, categoryName, minPrice, maxPrice, pageable);
+
+        List<ProductResponse> products = productPage.getContent().stream().map(
+                product -> new ProductResponse(
                         product.getCode(),
                         product.getName(),
                         product.getPrice(),
                         product.getDescription(),
                         product.getStock()
-                )).collect(Collectors.toList());
+                )
+        ).toList();
+
+
+        return new PageResponse<>(
+                products,
+                productPage.getNumber(),
+                productPage.getSize(),
+                productPage.getTotalElements(),
+                productPage.getTotalPages()
+        );
+    }
+
+    //getAllProduct, Obtener los productos, utilizando paginacion y cacheando los produtos
+    @Cacheable(value = "products", key = "'page=' + #page + ',size=' + #size")
+    public PageResponse<ProductResponse> getAllProducts(int page, int size) {
+
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Product> productsPage = productRepository.findAll(pageable);
+
+        List<ProductResponse> products = productsPage.getContent().stream().map(
+                product -> new ProductResponse(
+                        product.getCode(),
+                        product.getName(),
+                        product.getPrice(),
+                        product.getDescription(),
+                        product.getStock()
+                )
+        ).toList();
+
+        return new PageResponse<>(
+                products,
+                productsPage.getNumber(),
+                productsPage.getSize(),
+                productsPage.getTotalElements(),
+                productsPage.getTotalPages()
+        );
+
     }
 
     //getByIDProduct, Obtener producto por Id.
@@ -64,7 +106,7 @@ public class ProductServices {
 
     //createNewProduct, Crear un nuevo producto
     @CachePut(value = "productById", key = "#result.code")
-    @CacheEvict(value = {"productsAll", "productsByCategory", "categoryAll"}, allEntries = true) // Crear nuevo producto -> actualizar cache
+    @CacheEvict(value = {"productsAll", "productsByCategory", "categoryAll", "product"}, allEntries = true) // Crear nuevo producto -> actualizar cache
     public Product createNewProduct(ProductRequest request) throws ResourceNotFoundExceptions {
         Category category = categoryRepository.findById(request.getId_Category()).orElseThrow(
                 () -> new ResourceNotFoundExceptions("Categoria no encontrada")
@@ -84,7 +126,7 @@ public class ProductServices {
 
     //updateProduct, Acutalizar productos
     @CachePut(value = "productById", key = "#id")
-    @CacheEvict(value = {"productsAll", "productsByCategory", "categoryAll"}, allEntries = true)// Actualizar producto → actualizar cache
+    @CacheEvict(value = {"productsAll", "productsByCategory", "categoryAll", "product"}, allEntries = true)// Actualizar producto → actualizar cache
     public void updateProduct(Long id, ProductRequest request) throws ResourceNotFoundExceptions {
 
         Product product = productRepository.findById(id).orElseThrow(
@@ -99,12 +141,11 @@ public class ProductServices {
     }
 
     //deleteProducto, eliminar productos
-    @CacheEvict(value = {"productsById", "productsAll", "productsByCategory", "categoryAll"}, key = "#id", allEntries = true) // Eliminar producto → limpiar cache
+    @CacheEvict(value = {"productsById", "productsAll", "productsByCategory", "categoryAll", "product"}, key = "#id", allEntries = true) // Eliminar producto → limpiar cache
     public void deleteProduct(Long id) throws ResourceNotFoundExceptions {
         Product product = productRepository.findById(id).orElseThrow(
                 () -> new ResourceNotFoundExceptions("Producto no encotrado")
         );
         productRepository.delete(product);
     }
-
 }
